--- a/index.html
+++ b/index.html
@@ -73,10 +73,59 @@
                 </div>
             </div>
         </section>
+        <section class="description">
+            <div class="container">
+                <div class="description_inner">
+                    <img class= "description_img" src="img/description_img.jpg" alt="">
+                    <ul class="description_list">
+                        <li class="description_item">
+                            <h3 class="description_header">Комфорт та безпека від HIMO</h3>
+                            <p class="description_paragraph">Електровелосипед HIMO C26 дозволить вам швидко і з комфортом дістатися місця роботи або навчання і не прив'язуватися до міського транспорту. Велосипед має міцну конструкцію та значний запас ходу, щоб стати надійним транспортним засобом у сучасних міських умовах. Легка і міцна рама, 26-дюймові колеса і 7-ступінчаста система трансмісії дозволяють впевнено пересуватися не тільки асфальтованим дорожнім полотном, але й складною заміською трасою.
+                            </p>
+                        </li>
+                        <li class="description_item">
+                            <h3 class="description_header">міцна та легка рама</h3>
+                            <p class="description_paragraph">Рама HIMO C26 виготовлена ​​з міцного та легкого алюмінієвого сплаву та відрізняється високою надійністю, стійкістю в аварійних ситуаціях, чудовою керованістю та комфортним пересуванням по будь-якій дорозі.
+                            </p>
+                        </li>
+                        <li class="description_item">
+                            <h3 class="description_header">Комбінація режимів збільшення запасу ходу</h3>
+                            <p class="description_paragraph">Електровелосипед HIMO C26 має збільшений запас ходу.  Його акумулятор ємністю 10000 мАч з інтелектуальною системою оптимізації енергоспоживання дає змогу проїхати до 60 км на одному заряді в режимі електроприводу. При використанні деяких ділянках шляху фізичної сили дальність ходу збільшується до 100 км. Максимальна швидкість пересування HIMO C26 становить 25 км/год.
+                            </p>
+                        </li>
+                        <li class="description_item">
+                            <h3 class="description_header">Надійна трансмісія</h3>
+                            <p class="description_paragraph">7-ступінчаста система трансмісії забезпечує плавне та точне перемикання передач, зручне управління швидкістю та надійність у роботі. Перемикаючи передачі, ви зможете з мінімальними зусиллями заїхати на гірку та безпечно скотитися вниз.
+                            </p>
+                        </li>
+                        <li class="description_item">
+                            <h3 class="description_header">Вся інформація на РК-дисплеї</h3>
+                            <p class="description_paragraph">Вся інформація на РК-дисплеї<br>
+                                Великий інформативний дисплей, винесений на кермо, відображає всю важливу інформацію про роботу HIMO C26 в реальному часі. Ви зможете дізнатися про актуальну швидкість пересування, рівень заряду або пройдений шлях. Дисплей захищений від впливу зовнішніх факторів за стандартом IPX7 і не боїться дощу та пилу.</p>
+                        </li>
+                        <li class="description_item">
+                            <h3 class="description_header">зручне крісло</h3>
+                            <p class="description_paragraph">Електровелосипед Himo C26 укомплектований велосипедним сідлом від відомого бренду Selle Royal. Тривимірна гелева структура сідла забезпечує оптимальну пружність та високий комфорт під час їзди.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <section class="characteristic">
+            
+        </section>
+        <section class="slider">
+
+        </section>
+        <section class="order">
+
+        </section>
     </main>
     <footer>
 
     </footer>
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/main.js"></script>
