--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section class="description">
             <div class="container">
                 <div class="description_inner">
-                    <img class= "description_img" src="img/description_img.jpg" alt="">
+                    <img class= "description_img" src="img/description_img.jpg" alt="Women rides HIMO C26">
                     <ul class="description_list">
                         <li class="description_item">
                             <h3 class="description_header">Комфорт та безпека від HIMO</h3>
@@ -111,8 +111,119 @@
                 </div>
             </div>
         </section>
-        <section class="characteristic">
-            
+        <section class="characteristics">
+            <div class="container">
+                <div class="characteristics_inner">
+                    <div class="characteristics_column">
+                        <h3 class="characteristics_header">ХАрактеристики</h3>
+                        <div class="characteristics_table">
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">загальні</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Виробник</div>
+                                        <div class="characteristic_val">Xiaomi</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Вигляд</div>
+                                        <div class="characteristic_val">дорослий, дорожній, міський, електровелосипед, алюмінієва рама</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Колеса</div>
+                                        <div class="characteristic_val">26, подвійний алюмінієвий обід</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Электропривід</div>
+                                        <div class="characteristic_val">мотор 250W, разгон до 25 км/ч</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">амортизація</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Тип амортизации</div>
+                                        <div class="characteristic_val">амортизуюча вилка (Hard tail)</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Вилка</div>
+                                        <div class="characteristic_val">пружинно-еластомірна</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">керування</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Руль</div>
+                                        <div class="characteristic_val">вигнутий, регульований підйом</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Манетки</div>
+                                        <div class="characteristic_val">тригерні одноважільні, Shimano</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">характеристика трансмісії</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Кількість швидкостей</div>
+                                        <div class="characteristic_val">7</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Педалі</div>
+                                        <div class="characteristic_val">класичні</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Передній перемикач</div>
+                                        <div class="characteristic_val">1 зірка</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Задній перемикач</div>
+                                        <div class="characteristic_val">Shimano Tourney</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Касета</div>
+                                        <div class="characteristic_val">7 зірок</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">гальма</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Передні</div>
+                                        <div class="characteristic_val">дискові механічні</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Задні</div>
+                                        <div class="characteristic_val">дискові механічні</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Можливість встановлення дискових</div>
+                                        <div class="characteristic_val">рама, вилка, втулка </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="characteristic_section">
+                                <h4 class="characteristic_header">інше</h4>
+                                <div class="characteristic_info">
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Додаткові комплектуючі</div>
+                                        <div class="characteristic_val">електрообладнання, дзвінок</div>
+                                    </div>
+                                    <div class="characteristic_line">
+                                        <div class="characteristic_name">Вага</div>
+                                        <div class="characteristic_val">25 кг</div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <img src="img/characteristic_img.jpg" alt="HIMO C26's display" class="characteristic_img">
+                </div>
+            </div>
         </section>
         <section class="slider">
 
