--- a/index.html
+++ b/index.html
@@ -225,8 +225,14 @@
                 </div>
             </div>
         </section>
-        <section class="slider">
-
+        <section class="slider-section">
+            <div class="container">
+                <div class="slider">
+                    <img src="img/bike5.jpg" alt="bike" class="slider_item">
+                    <img src="img/bike6.jpg" alt="bike" class="slider_item">
+                    <img src="img/bike7.jpg" alt="bike" class="slider_item">
+                </div>
+            </div>
         </section>
         <section class="order">
 
