--- a/index.html
+++ b/index.html
@@ -235,7 +235,23 @@
             </div>
         </section>
         <section class="order">
-
+            <div class="container">
+                <div class="order_inner">
+                    <form action="#" method="post" class="form-order">
+                        <h3 class="form-header">Замовити</h3>
+                        <p class="form-text">Якщо Ви бажаєте замовити велосипед, залиште свій контакт і наш менеджер зв’яжеться з вами найближчим часом</p>
+                        <input type="text" name="name" placeholder="ім’я" class="input client_name">
+                        <input type="tel" name="tel" placeholder="телефон" class="input client_phone">
+                        <p class="choose_color">виберіть колір велосипеда</p>
+                        <input type="radio" class="color" name="color" id="radio-grey">
+                        <input type="radio" class="color" name="color" id="radio-white" checked>
+                        <input type="radio" class="color" name="color" id="radio-red">
+                        <button type="submit" class="button">ЗАмовиТи</button>
+                        <div class="bike-img"></div>
+                    </form>
+                    <img src="img/price.jpg" alt="price" class="price">
+                </div>
+            </div>
         </section>
     </main>
     <footer>
