--- a/index.html
+++ b/index.html
@@ -255,7 +255,25 @@
         </section>
     </main>
     <footer>
-
+        <div class="container">
+            <div class="footer_inner">
+                <div class="privacy-policy">Політика конфеденційності</div>
+                <div class="social">
+                    <a href="#"><img src="img/instagram.svg" alt="instagram" class="instagram-link"></a>
+                    <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
+                </div>
+                <div class="contacts">
+                    <div class="contact-row">
+                        <img src="img/phone.svg" alt="phone: ">
+                        <a href="tel:+38 050 677 77 77">+38 050 677 77 77</a>
+                    </div>
+                    <div class="contact-row">
+                        <img src="img/mail.svg" alt="mail: ">
+                        <a href="mailto:elektrobikeukr@gmail.com">elektrobikeukr@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
 
