--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                     <img src="img/logo.svg" alt="Logo">
                 </div>
                 <nav class="menu">
-                    <a class="menu_item" href="#">Опис</a>
-                    <a class="menu_item" href="#">Характеристики</a>
-                    <a class="menu_item" href="#">вартість</a>
+                    <a class="menu_item" href="#description">Опис</a>
+                    <a class="menu_item" href="#characteristics">Характеристики</a>
+                    <a class="menu_item" href="#order">вартість</a>
                 </nav>
             </div>
         </div>
@@ -40,7 +40,7 @@
                         <h2 class="bike_subtitle">Електричний велосипед</h2>
                         <p class="bike_description">Повна свобода пересування та надійний транспорт для подорожей на будь-які відстані</p>
                         <p class="bike_description">HIMO C26 - це новий електровелосипед від Xiaomi, який створений як для поїзди містом, так і бездоріжжям. Він має потужний двигун і ємнісний акумулятор, завдяки яким здатний проїжджати на одному заряді до 100 км, що безперечно вище, ніж у більшості конкурентів. А великі колеса з пневматичними шинами, дискові гальма, 7-швидкісна трансмісія та ергономічне сидіння роблять кожну поїздку набагато приємнішою.</p>
-                        <a class="button" href="#">ЗАмовиТи</a>
+                        <a class="button" href="#order">ЗАмовиТи</a>
                     </div>
                     <div class="bike_column right">
                         <div class="slider">
@@ -73,14 +73,14 @@
                 </div>
             </div>
         </section>
-        <section class="description">
+        <section class="description" id="description">
             <div class="container">
                 <div class="description_inner">
                     <img class= "description_img" src="img/description_img.jpg" alt="Women rides HIMO C26">
                     <ul class="description_list">
                         <li class="description_item">
                             <h3 class="description_header">Комфорт та безпека від HIMO</h3>
-                            <p class="description_paragraph">Електровелосипед HIMO C26 дозволить вам швидко і з комфортом дістатися місця роботи або навчання і не прив'язуватися до міського транспорту. Велосипед має міцну конструкцію та значний запас ходу, щоб стати надійним транспортним засобом у сучасних міських умовах. Легка і міцна рама, 26-дюймові колеса і 7-ступінчаста система трансмісії дозволяють впевнено пересуватися не тільки асфальтованим дорожнім полотном, але й складною заміською трасою.
+                            <p class="description_paragraph">Електровелосипед HIMO C26 дозволить вам швидкоі з комфортом дістатися місця роботи або навчання і не прив'язуватися до міського транспорту. Велосипед має міцну конструкцію та значний запас ходу, щоб стати надійним транспортним засобом у сучасних міських умовах. Легка і міцна рама, 26-дюймові колеса і 7-ступінчаста система трансмісії дозволяють впевнено пересуватися не тільки асфальтованим дорожнім полотном, але й складною заміською трасою.
                             </p>
                         </li>
                         <li class="description_item">
@@ -90,7 +90,7 @@
                         </li>
                         <li class="description_item">
                             <h3 class="description_header">Комбінація режимів збільшення запасу ходу</h3>
-                            <p class="description_paragraph">Електровелосипед HIMO C26 має збільшений запас ходу.  Його акумулятор ємністю 10000 мАч з інтелектуальною системою оптимізації енергоспоживання дає змогу проїхати до 60 км на одному заряді в режимі електроприводу. При використанні деяких ділянках шляху фізичної сили дальність ходу збільшується до 100 км. Максимальна швидкість пересування HIMO C26 становить 25 км/год.
+                            <p class="description_paragraph">Електровелосипед HIMO C26 має збільшений запас ходу. Його акумулятор ємністю 10000 мАч з інтелектуальною системою оптимізації енергоспоживання дає змогу проїхати до 60 км на одному заряді в режимі електроприводу. При використанні деяких ділянках шляху фізичної сили дальність ходу збільшується до 100 км. Максимальна швидкість пересування HIMO C26 становить 25 км/год.
                             </p>
                         </li>
                         <li class="description_item">
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </section>
-        <section class="characteristics">
+        <section class="characteristics" id="characteristics">
             <div class="container">
                 <div class="characteristics_inner">
                     <div class="characteristics_column">
@@ -234,7 +234,7 @@
                 </div>
             </div>
         </section>
-        <section class="order">
+        <section class="order" id="order">
             <div class="container">
                 <div class="order_inner">
                     <form action="#" method="post" class="form-order">
@@ -257,7 +257,7 @@
     <footer>
         <div class="container">
             <div class="footer_inner">
-                <div class="privacy-policy">Політика конфеденційності</div>
+                <div class="privacy-policy"><a href="#">Політика конфеденційності</a></div>
                 <div class="social">
                     <a href="#"><img src="img/instagram.svg" alt="instagram" class="instagram-link"></a>
                     <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
